[package]
name = "photocache"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.17"
libc = "0.2"
rusqlite = { version = "0.34", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
